chore(gradle) : setup shadowJar & jackson dependency